# urgent-mcs-cto-pci-prediction

./: .gitignore  README.md  config.yaml  pyproject.toml
src/bakeoff/: analysis.py  config.py  dashboard.py  data.py  explain.py  firth.py  main.py  models.py  pipeline.py  plotting.py  predict.py  preprocessing.py  training.py  tripod.py  tripod_main.py
