[project]
name = "cto-pci-tripod-model"
version = "1.0.0"
description = "TRIPOD+AI-compliant Firth logistic regression model for CTO-PCI adverse outcome prediction with model comparison"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "pandas",
    "scikit-learn",
    "matplotlib",
    "xgboost",
    "pyyaml",
    "statsmodels>=0.14",
    "seaborn>=0.13",
]

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
